[package]
name = "tracing-xray"
version = "0.1.0"
authors = ["david"]
edition = "2018"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
tracing = "0.1.10"
tracing-subscriber = "0.2.0-alpha.2"
rand = "0.7.2"
